[package]
name = "wasmtime-api-testing"
version = "0.1.0"
authors = ["Mark Bestavros <mbestavr@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#wasmtime = { git = "https://github.com/steveeJ-forks/wasmtime", branch="pr/wasmtime-api" }
cranelift-codegen = { version = "0.37.0" }
cranelift-native = "0.37.0"
wasmtime-environ = { git = "https://github.com/CraneStation/wasmtime" }
wasmtime-runtime = { git = "https://github.com/CraneStation/wasmtime" }
wasmtime-jit = { git = "https://github.com/CraneStation/wasmtime" }
wabt = "0.7"